[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/Tilesets/Tileset_Main.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/GenericScene.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/LoadingZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Enemies/EnemySpawn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/FloorSwitch.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/OperateOnFlag.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 8 )

[node name="Scene" type="Node2D"]
script = ExtResource( 2 )
enemy_threshold = 2
flag_override = "demon_door_5"
flag_override_value = 1

[node name="TileMap" type="TileMap" parent="."]
z_index = -1000
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 15, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 15, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 15, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 15, 0, 196621, 15, 0, 196622, 15, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 15, 0, 262152, 6, 0, 262153, 6, 0, 262154, 6, 0, 262155, 6, 0, 262156, 6, 0, 262157, 15, 0, 262158, 15, 0, 262159, 15, 0, 262160, 15, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 15, 0, 327687, 15, 0, 327688, 6, 0, 327689, 6, 0, 327690, 6, 0, 327691, 6, 0, 327692, 6, 0, 327693, 6, 0, 327694, 6, 0, 327695, 15, 0, 327696, 15, 0, 327697, 15, 0, 327698, 15, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 15, 0, 393223, 6, 0, 393224, 1610612739, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393228, 6, 0, 393229, 6, 0, 393230, 6, 0, 393231, 6, 0, 393232, 6, 0, 393233, 15, 0, 393234, 15, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 15, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 6, 0, 458769, 6, 0, 458770, 6, 0, 458771, 0, 0, 524288, 0, 0, 524289, 15, 0, 524290, 15, 0, 524291, 15, 0, 524292, 15, 0, 524293, 15, 0, 524294, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 6, 0, 524299, 6, 0, 524300, 2, 0, 524301, 2, 0, 524302, 6, 0, 524303, 6, 0, 524304, 6, 0, 524305, 6, 0, 524306, 6, 0, 524307, 0, 0, 589824, 0, 0, 589825, 15, 0, 589826, 15, 0, 589827, 15, 0, 589828, 15, 0, 589829, 6, 0, 589830, 6, 0, 589831, 6, 0, 589832, 6, 0, 589833, 6, 0, 589834, 6, 0, 589835, 2, 0, 589836, 2, 0, 589837, 6, 0, 589838, 6, 0, 589839, 6, 0, 589840, 6, 0, 589841, 6, 0, 589842, 6, 0, 589843, 0, 0, 655360, 0, 0, 655361, 6, 0, 655362, 6, 0, 655363, 9, 0, 655364, 6, 0, 655365, 6, 0, 655366, 6, 0, 655367, 6, 0, 655368, 6, 0, 655369, 6, 0, 655370, 6, 0, 655371, 6, 0, 655372, 6, 0, 655373, 6, 0, 655374, 6, 0, 655375, 6, 0, 655376, 8, 0, 655377, 6, 0, 655378, 6, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 6, 0, 720902, 6, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap2" type="TileMap" parent="."]
z_index = -1000
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 9, 18, 0, 10, 18, 0, 11, 18, 0, 65545, 19, 0, 65546, 19, 0, 65547, 19, 0, 131081, 19, 0, 131082, 19, 0, 131083, 19, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="OperateOnFlag" parent="TileMap2" instance=ExtResource( 7 )]
flag = "demon_door_5"
value = 1

[node name="TileMap3" type="TileMap" parent="."]
z_index = -1000
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65545, 16, 0, 65546, 16, 0, 65547, 16, 0, 131081, 22, 0, 131082, 22, 0, 131083, 22, 0, 196617, 22, 0, 196618, 22, 0, 196619, 22, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 128, 134 )

[node name="LoadingZone" parent="." instance=ExtResource( 3 )]
position = Vector2( 96, 192 )
target_scene = "res://Scenes/Dungeon/Dungeon_Entrance_L3A.tscn"
target_direction = 1

[node name="CollisionShape2D" parent="LoadingZone" index="0"]
shape = SubResource( 1 )

[node name="EnemySpawn" parent="." instance=ExtResource( 4 )]
position = Vector2( 288, 120 )

[node name="EnemySpawn2" parent="." instance=ExtResource( 4 )]
position = Vector2( 136, 72 )

[node name="Teleport1" type="Position2D" parent="." groups=[
"TeleportPoint",
]]
position = Vector2( 136, 72 )

[node name="Teleport2" type="Position2D" parent="." groups=[
"TeleportPoint",
]]
position = Vector2( 288, 120 )

[node name="Teleport3" type="Position2D" parent="." groups=[
"TeleportPoint",
]]
position = Vector2( 280, 160 )

[node name="Teleport5" type="Position2D" parent="." groups=[
"TeleportPoint",
]]
position = Vector2( 112, 120 )

[node name="Teleport6" type="Position2D" parent="." groups=[
"TeleportPoint",
]]
position = Vector2( 216, 88 )

[node name="FloorSwitch" parent="." instance=ExtResource( 6 )]
position = Vector2( 168, 75 )
type = 1

[node name="OperateOnFlag" parent="FloorSwitch" instance=ExtResource( 7 )]
flag = "floorswitch_3"
value = 1
operation = 4

[node name="LoadingZone2" parent="." instance=ExtResource( 3 )]
position = Vector2( 168, 0 )
target_scene = "res://Scenes/Dungeon/Dungeon_Entrance_L3C.tscn"

[node name="CollisionShape2D" parent="LoadingZone2" index="0"]
shape = SubResource( 2 )

[node name="TimerSpawn" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TimerSpawn2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="enemy_threshold_reached" from="." to="TileMap2" method="queue_free"]
[connection signal="enemy_threshold_reached" from="." to="." method="set_flag" binds= [ "demon_door_5", 1 ]]
[connection signal="enemy_dead" from="EnemySpawn" to="." method="increment_enemies_defeated"]
[connection signal="enemy_dead" from="EnemySpawn2" to="." method="increment_enemies_defeated"]
[connection signal="activated" from="FloorSwitch" to="TileMap3" method="queue_free"]
[connection signal="activated" from="FloorSwitch" to="." method="set_flag" binds= [ "floorswitch_3", 1 ]]
[connection signal="timeout" from="TimerSpawn" to="EnemySpawn2" method="spawn_enemy"]
[connection signal="timeout" from="TimerSpawn2" to="EnemySpawn" method="spawn_enemy"]

[editable path="LoadingZone"]

[editable path="LoadingZone2"]
